# GPU-Programming-with-CPP-and-CUDA

./: README.md  takeaways.txt
chapters/chapter_4/examples/1_primes/: CMakeLists.txt
chapters/chapter_4/examples/1_primes/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/examples/1_primes/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_4/examples/2_vector_add/: CMakeLists.txt
chapters/chapter_4/examples/2_vector_add/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/examples/2_vector_add/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_4/examples/3_euclidean_distance/: CMakeLists.txt
chapters/chapter_4/examples/3_euclidean_distance/include/: common_values.hpp  kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/examples/3_euclidean_distance/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_4/exercises/exercise_1/: CMakeLists.txt
chapters/chapter_4/exercises/exercise_1/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/exercises/exercise_1/src/: main.cpp
chapters/chapter_4/exercises/exercise_2/: CMakeLists.txt
chapters/chapter_4/exercises/exercise_2/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/exercises/exercise_2/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_4/exercises/exercise_3/: CMakeLists.txt
chapters/chapter_4/exercises/exercise_3/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/exercises/exercise_3/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_4/exercises/exercise_4/: CMakeLists.txt
chapters/chapter_4/exercises/exercise_4/include/: kernel_cpu.hpp  kernel_gpu.cuh
chapters/chapter_4/exercises/exercise_4/src/: kernel_cpu.cpp  kernel_gpu.cu  main.cpp
chapters/chapter_5/samples/sample_1/: CMakeLists.txt
chapters/chapter_5/samples/sample_1/src/: kernel_cpu.cpp  kernel_gpu.cu
